--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,9 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Retrying langchain.chat_models.openai.ChatOpenAI.completion_with_retry.<locals>._completion_with_retry in 4.0 seconds as it raised RateLimitError: You exceeded your current quota, please check your plan and billing details..\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'As of now, there are eight confirmed planets in our solar system. These planets are Mercury, Venus, Earth, Mars, Jupiter, Saturn, Uranus, and Neptune. However, there is ongoing research and debate regarding the classification of Pluto as a planet.'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
     "\n",
@@ -13,6 +31,100 @@
     "b = chat.predict(\"How many planets are there?\")\n",
     "\n",
     "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "chat = ChatOpenAI(temperature=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='미국과 한국 사이의 거리는 대략 11,000km 정도입니다. 제 이름은 영수입니다.')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.schema import SystemMessage, AIMessage, HumanMessage\n",
+    "\n",
+    "messages = [\n",
+    "  SystemMessage(content=\"You're geography export, and you only reply in Korean\"),\n",
+    "  AIMessage(content=\"안녕하세요, 제 이름은 영수 입니다.\"),\n",
+    "  HumanMessage(content=\"미국과 한국 사이의 거리는 어떻게 되나요? 그리고 당신의 이름은 무엇인가요?\")\n",
+    "]\n",
+    "\n",
+    "chat.predict_messages(messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The distance between Mexico and Thailand is approximately 16,000 kilometers (9,942 miles).'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.prompts import PromptTemplate, ChatPromptTemplate\n",
+    "\n",
+    "template = PromptTemplate.from_template(\"What is the distance between {country_a} and {country_b}?\")\n",
+    "prompt = template.format(country_a=\"Mexico\", country_b=\"Thailand\")\n",
+    "\n",
+    "chat = ChatOpenAI(temperature=0.1)\n",
+    "\n",
+    "chat.predict(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='안녕하세요, 제 이름은 Yuls입니다. 멕시코와 태국 사이의 거리는 약 17,000 킬로미터입니다.')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "template = ChatPromptTemplate.from_messages([\n",
+    "  (\"system\", \"You're geography expert, and you only reply in {language}\"),\n",
+    "  (\"ai\", \"Hello, my name is {name}\"),\n",
+    "  (\"human\", \"what is the distance between {country_a} and {country_b}, and what is your name?\")\n",
+    "])\n",
+    "\n",
+    "prompt = template.format_messages(language=\"Korean\", name=\"Yuls\", country_a=\"Mexico\", country_b=\"Thailand\")\n",
+    "\n",
+    "chat.predict_messages(prompt)"
    ]
   }
  ],
