--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,228 +2,117 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
+    "\n",
+    "chat = ChatOpenAI(temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()])\n",
+    "\n",
+    "chef_prompt = ChatPromptTemplate.from_messages([\n",
+    "  (\"system\", \"You're a world-class international chef. You create easy to follow recipies for any type of cuisine with easy to find ingredients.\"),\n",
+    "  (\"human\", \"I want to cook {cuisine} food\")\n",
+    "])\n",
+    "\n",
+    "chef_chain = chef_prompt | chat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retrying langchain.chat_models.openai.ChatOpenAI.completion_with_retry.<locals>._completion_with_retry in 4.0 seconds as it raised RateLimitError: You exceeded your current quota, please check your plan and billing details..\n"
+      "Great choice! Indian cuisine is known for its rich flavors and aromatic spices. Here's a simple recipe for Butter Chicken, a popular Indian dish:\n",
+      "\n",
+      "Ingredients:\n",
+      "- 500g boneless chicken, cut into bite-sized pieces\n",
+      "- 2 tablespoons butter\n",
+      "- 1 onion, finely chopped\n",
+      "- 2 cloves of garlic, minced\n",
+      "- 1-inch piece of ginger, grated\n",
+      "- 2 teaspoons garam masala\n",
+      "- 1 teaspoon turmeric powder\n",
+      "- 1 teaspoon chili powder (adjust to your spice preference)\n",
+      "- 1 cup tomato puree\n",
+      "- 1/2 cup heavy cream\n",
+      "- Salt to taste\n",
+      "- Fresh cilantro leaves, for garnish\n",
+      "\n",
+      "Instructions:\n",
+      "1. Heat the butter in a large pan over medium heat. Add the chopped onion and sauté until golden brown.\n",
+      "2. Add the minced garlic and grated ginger to the pan. Cook for another minute until fragrant.\n",
+      "3. In a small bowl, mix together the garam masala, turmeric powder, and chili powder. Add this spice mixture to the pan and cook for a minute, stirring continuously.\n",
+      "4. Add the chicken pieces to the pan and cook until they are lightly browned on all sides.\n",
+      "5. Pour in the tomato puree and season with salt. Stir well to combine all the ingredients.\n",
+      "6. Reduce the heat to low, cover the pan, and let the chicken simmer for about 15-20 minutes, or until it is cooked through and tender.\n",
+      "7. Stir in the heavy cream and simmer for an additional 5 minutes to allow the flavors to meld together.\n",
+      "8. Taste and adjust the seasoning if needed.\n",
+      "9. Garnish with fresh cilantro leaves before serving.\n",
+      "10. Serve the Butter Chicken hot with steamed rice or naan bread.\n",
+      "\n",
+      "Enjoy your homemade Butter Chicken!Great choice! Butter Chicken is a delicious dish, and I can help you make a vegetarian version of it. Instead of using chicken, we can replace it with a vegetarian protein option like tofu or paneer (Indian cottage cheese). Here's how you can modify the recipe:\n",
+      "\n",
+      "Ingredients:\n",
+      "- 500g tofu or paneer, cut into bite-sized pieces\n",
+      "- 2 tablespoons butter (or vegetable oil for a vegan version)\n",
+      "- 1 onion, finely chopped\n",
+      "- 2 cloves of garlic, minced\n",
+      "- 1-inch piece of ginger, grated\n",
+      "- 2 teaspoons garam masala\n",
+      "- 1 teaspoon turmeric powder\n",
+      "- 1 teaspoon chili powder (adjust to your spice preference)\n",
+      "- 1 cup tomato puree\n",
+      "- 1/2 cup heavy cream (or coconut cream for a vegan version)\n",
+      "- Salt to taste\n",
+      "- Fresh cilantro leaves, for garnish\n",
+      "\n",
+      "Instructions:\n",
+      "1. Heat the butter (or oil) in a large pan over medium heat. Add the chopped onion and sauté until golden brown.\n",
+      "2. Add the minced garlic and grated ginger to the pan. Cook for another minute until fragrant.\n",
+      "3. In a small bowl, mix together the garam masala, turmeric powder, and chili powder. Add this spice mixture to the pan and cook for a minute, stirring continuously.\n",
+      "4. Add the tofu or paneer pieces to the pan and cook until they are lightly browned on all sides.\n",
+      "5. Pour in the tomato puree and season with salt. Stir well to combine all the ingredients.\n",
+      "6. Reduce the heat to low, cover the pan, and let the tofu or paneer simmer for about 15-20 minutes, or until it absorbs the flavors and becomes tender.\n",
+      "7. Stir in the heavy cream (or coconut cream) and simmer for an additional 5 minutes to allow the flavors to meld together.\n",
+      "8. Taste and adjust the seasoning if needed.\n",
+      "9. Garnish with fresh cilantro leaves before serving.\n",
+      "10. Serve the Vegetarian Butter Chicken hot with steamed rice or naan bread.\n",
+      "\n",
+      "Enjoy your homemade Vegetarian Butter Chicken!"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'As of now, there are eight confirmed planets in our solar system. These planets are Mercury, Venus, Earth, Mars, Jupiter, Saturn, Uranus, and Neptune. However, there is ongoing research and debate regarding the classification of Pluto as a planet.'"
+       "AIMessageChunk(content=\"Great choice! Butter Chicken is a delicious dish, and I can help you make a vegetarian version of it. Instead of using chicken, we can replace it with a vegetarian protein option like tofu or paneer (Indian cottage cheese). Here's how you can modify the recipe:\\n\\nIngredients:\\n- 500g tofu or paneer, cut into bite-sized pieces\\n- 2 tablespoons butter (or vegetable oil for a vegan version)\\n- 1 onion, finely chopped\\n- 2 cloves of garlic, minced\\n- 1-inch piece of ginger, grated\\n- 2 teaspoons garam masala\\n- 1 teaspoon turmeric powder\\n- 1 teaspoon chili powder (adjust to your spice preference)\\n- 1 cup tomato puree\\n- 1/2 cup heavy cream (or coconut cream for a vegan version)\\n- Salt to taste\\n- Fresh cilantro leaves, for garnish\\n\\nInstructions:\\n1. Heat the butter (or oil) in a large pan over medium heat. Add the chopped onion and sauté until golden brown.\\n2. Add the minced garlic and grated ginger to the pan. Cook for another minute until fragrant.\\n3. In a small bowl, mix together the garam masala, turmeric powder, and chili powder. Add this spice mixture to the pan and cook for a minute, stirring continuously.\\n4. Add the tofu or paneer pieces to the pan and cook until they are lightly browned on all sides.\\n5. Pour in the tomato puree and season with salt. Stir well to combine all the ingredients.\\n6. Reduce the heat to low, cover the pan, and let the tofu or paneer simmer for about 15-20 minutes, or until it absorbs the flavors and becomes tender.\\n7. Stir in the heavy cream (or coconut cream) and simmer for an additional 5 minutes to allow the flavors to meld together.\\n8. Taste and adjust the seasoning if needed.\\n9. Garnish with fresh cilantro leaves before serving.\\n10. Serve the Vegetarian Butter Chicken hot with steamed rice or naan bread.\\n\\nEnjoy your homemade Vegetarian Butter Chicken!\")"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "\n",
-    "chat = ChatOpenAI()\n",
-    "\n",
-    "b = chat.predict(\"How many planets are there?\")\n",
-    "\n",
-    "b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "chat = ChatOpenAI(temperature=0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='미국과 한국 사이의 거리는 대략 11,000km 정도입니다. 제 이름은 영수입니다.')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from langchain.schema import SystemMessage, AIMessage, HumanMessage\n",
-    "\n",
-    "messages = [\n",
-    "  SystemMessage(content=\"You're geography export, and you only reply in Korean\"),\n",
-    "  AIMessage(content=\"안녕하세요, 제 이름은 영수 입니다.\"),\n",
-    "  HumanMessage(content=\"미국과 한국 사이의 거리는 어떻게 되나요? 그리고 당신의 이름은 무엇인가요?\")\n",
-    "]\n",
-    "\n",
-    "chat.predict_messages(messages)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The distance between Mexico and Thailand is approximately 16,000 kilometers (9,942 miles).'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import PromptTemplate, ChatPromptTemplate\n",
-    "\n",
-    "template = PromptTemplate.from_template(\"What is the distance between {country_a} and {country_b}?\")\n",
-    "prompt = template.format(country_a=\"Mexico\", country_b=\"Thailand\")\n",
-    "\n",
-    "chat = ChatOpenAI(temperature=0.1)\n",
-    "\n",
-    "chat.predict(prompt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='안녕하세요, 제 이름은 Yuls입니다. 멕시코와 태국 사이의 거리는 약 17,000 킬로미터입니다.')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "template = ChatPromptTemplate.from_messages([\n",
-    "  (\"system\", \"You're geography expert, and you only reply in {language}\"),\n",
-    "  (\"ai\", \"Hello, my name is {name}\"),\n",
-    "  (\"human\", \"what is the distance between {country_a} and {country_b}, and what is your name?\")\n",
+    "veg_chef_prompt = ChatPromptTemplate.from_messages([\n",
+    "  (\"system\", \"You're a vegetarian chef specialized on making traditional recipies vegetarian. You find alternative ingrediants and explain their preparation. You don't radically modify recipies. If there's no alternative for a food, just say you don't know how to replace it.\"),\n",
+    "  (\"human\", \"{recipe}\")\n",
     "])\n",
     "\n",
-    "prompt = template.format_messages(language=\"Korean\", name=\"Yuls\", country_a=\"Mexico\", country_b=\"Thailand\")\n",
+    "veg_chain = veg_chef_prompt | chat\n",
     "\n",
-    "chat.predict_messages(prompt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Hello', 'how', 'are', 'you']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from langchain.schema import BaseOutputParser\n",
+    "final_chain = {\"recipe\": chef_chain} | veg_chain\n",
     "\n",
-    "class CommaOutputParser(BaseOutputParser):\n",
-    "  def parse(self, text):\n",
-    "    items = text.strip().split(\",\")\n",
-    "    return list(map(str.strip, items))\n",
-    "  \n",
-    "p = CommaOutputParser()\n",
-    "p.parse(\"Hello, how, are, you\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['red',\n",
-       " 'orange',\n",
-       " 'yellow',\n",
-       " 'green',\n",
-       " 'blue',\n",
-       " 'indigo',\n",
-       " 'violet',\n",
-       " 'black',\n",
-       " 'white',\n",
-       " 'gray']"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "template = ChatPromptTemplate.from_messages([\n",
-    "  (\"system\", \"You're list generating machine. Everything you're asked will be answered with a comma separated list of max {max_items} in lower case. Do NOT reply with anything else\"),\n",
-    "  (\"human\", \"{question}\")\n",
-    "])\n",
-    "\n",
-    "prompt = template.format_messages(max_items=10, question=\"What are the colors?\")\n",
-    "\n",
-    "result = chat.predict_messages(prompt)\n",
-    "\n",
-    "p = CommaOutputParser()\n",
-    "p.parse(result.content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['pikachu', 'charizard', 'bulbasaur', 'squirtle', 'jigglypuff']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chain = template | chat | CommaOutputParser()\n",
-    "chain.invoke({\n",
-    "  \"max_items\": 5,\n",
-    "  \"question\": \"What are the pokemons?\"\n",
+    "final_chain.invoke({\n",
+    "  \"cuisine\": \"indian\"\n",
     "})"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
