--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,115 +2,85 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import ChatPromptTemplate\n",
-    "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
-    "\n",
-    "chat = ChatOpenAI(temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()])\n",
-    "\n",
-    "chef_prompt = ChatPromptTemplate.from_messages([\n",
-    "  (\"system\", \"You're a world-class international chef. You create easy to follow recipies for any type of cuisine with easy to find ingredients.\"),\n",
-    "  (\"human\", \"I want to cook {cuisine} food\")\n",
-    "])\n",
-    "\n",
-    "chef_chain = chef_prompt | chat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Great choice! Indian cuisine is known for its rich flavors and aromatic spices. Here's a simple recipe for Butter Chicken, a popular Indian dish:\n",
-      "\n",
-      "Ingredients:\n",
-      "- 500g boneless chicken, cut into bite-sized pieces\n",
-      "- 2 tablespoons butter\n",
-      "- 1 onion, finely chopped\n",
-      "- 2 cloves of garlic, minced\n",
-      "- 1-inch piece of ginger, grated\n",
-      "- 2 teaspoons garam masala\n",
-      "- 1 teaspoon turmeric powder\n",
-      "- 1 teaspoon chili powder (adjust to your spice preference)\n",
-      "- 1 cup tomato puree\n",
-      "- 1/2 cup heavy cream\n",
-      "- Salt to taste\n",
-      "- Fresh cilantro leaves, for garnish\n",
-      "\n",
-      "Instructions:\n",
-      "1. Heat the butter in a large pan over medium heat. Add the chopped onion and sauté until golden brown.\n",
-      "2. Add the minced garlic and grated ginger to the pan. Cook for another minute until fragrant.\n",
-      "3. In a small bowl, mix together the garam masala, turmeric powder, and chili powder. Add this spice mixture to the pan and cook for a minute, stirring continuously.\n",
-      "4. Add the chicken pieces to the pan and cook until they are lightly browned on all sides.\n",
-      "5. Pour in the tomato puree and season with salt. Stir well to combine all the ingredients.\n",
-      "6. Reduce the heat to low, cover the pan, and let the chicken simmer for about 15-20 minutes, or until it is cooked through and tender.\n",
-      "7. Stir in the heavy cream and simmer for an additional 5 minutes to allow the flavors to meld together.\n",
-      "8. Taste and adjust the seasoning if needed.\n",
-      "9. Garnish with fresh cilantro leaves before serving.\n",
-      "10. Serve the Butter Chicken hot with steamed rice or naan bread.\n",
-      "\n",
-      "Enjoy your homemade Butter Chicken!Great choice! Butter Chicken is a delicious dish, and I can help you make a vegetarian version of it. Instead of using chicken, we can replace it with a vegetarian protein option like tofu or paneer (Indian cottage cheese). Here's how you can modify the recipe:\n",
-      "\n",
-      "Ingredients:\n",
-      "- 500g tofu or paneer, cut into bite-sized pieces\n",
-      "- 2 tablespoons butter (or vegetable oil for a vegan version)\n",
-      "- 1 onion, finely chopped\n",
-      "- 2 cloves of garlic, minced\n",
-      "- 1-inch piece of ginger, grated\n",
-      "- 2 teaspoons garam masala\n",
-      "- 1 teaspoon turmeric powder\n",
-      "- 1 teaspoon chili powder (adjust to your spice preference)\n",
-      "- 1 cup tomato puree\n",
-      "- 1/2 cup heavy cream (or coconut cream for a vegan version)\n",
-      "- Salt to taste\n",
-      "- Fresh cilantro leaves, for garnish\n",
-      "\n",
-      "Instructions:\n",
-      "1. Heat the butter (or oil) in a large pan over medium heat. Add the chopped onion and sauté until golden brown.\n",
-      "2. Add the minced garlic and grated ginger to the pan. Cook for another minute until fragrant.\n",
-      "3. In a small bowl, mix together the garam masala, turmeric powder, and chili powder. Add this spice mixture to the pan and cook for a minute, stirring continuously.\n",
-      "4. Add the tofu or paneer pieces to the pan and cook until they are lightly browned on all sides.\n",
-      "5. Pour in the tomato puree and season with salt. Stir well to combine all the ingredients.\n",
-      "6. Reduce the heat to low, cover the pan, and let the tofu or paneer simmer for about 15-20 minutes, or until it absorbs the flavors and becomes tender.\n",
-      "7. Stir in the heavy cream (or coconut cream) and simmer for an additional 5 minutes to allow the flavors to meld together.\n",
-      "8. Taste and adjust the seasoning if needed.\n",
-      "9. Garnish with fresh cilantro leaves before serving.\n",
-      "10. Serve the Vegetarian Butter Chicken hot with steamed rice or naan bread.\n",
-      "\n",
-      "Enjoy your homemade Vegetarian Butter Chicken!"
+      "AI: \n",
+      "    I know this:\n",
+      "    Capital: Seoul\n",
+      "    Language: Korean\n",
+      "    Food: Kimchi and Bibimbap\n",
+      "    Currency: South Korean won"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "AIMessageChunk(content=\"Great choice! Butter Chicken is a delicious dish, and I can help you make a vegetarian version of it. Instead of using chicken, we can replace it with a vegetarian protein option like tofu or paneer (Indian cottage cheese). Here's how you can modify the recipe:\\n\\nIngredients:\\n- 500g tofu or paneer, cut into bite-sized pieces\\n- 2 tablespoons butter (or vegetable oil for a vegan version)\\n- 1 onion, finely chopped\\n- 2 cloves of garlic, minced\\n- 1-inch piece of ginger, grated\\n- 2 teaspoons garam masala\\n- 1 teaspoon turmeric powder\\n- 1 teaspoon chili powder (adjust to your spice preference)\\n- 1 cup tomato puree\\n- 1/2 cup heavy cream (or coconut cream for a vegan version)\\n- Salt to taste\\n- Fresh cilantro leaves, for garnish\\n\\nInstructions:\\n1. Heat the butter (or oil) in a large pan over medium heat. Add the chopped onion and sauté until golden brown.\\n2. Add the minced garlic and grated ginger to the pan. Cook for another minute until fragrant.\\n3. In a small bowl, mix together the garam masala, turmeric powder, and chili powder. Add this spice mixture to the pan and cook for a minute, stirring continuously.\\n4. Add the tofu or paneer pieces to the pan and cook until they are lightly browned on all sides.\\n5. Pour in the tomato puree and season with salt. Stir well to combine all the ingredients.\\n6. Reduce the heat to low, cover the pan, and let the tofu or paneer simmer for about 15-20 minutes, or until it absorbs the flavors and becomes tender.\\n7. Stir in the heavy cream (or coconut cream) and simmer for an additional 5 minutes to allow the flavors to meld together.\\n8. Taste and adjust the seasoning if needed.\\n9. Garnish with fresh cilantro leaves before serving.\\n10. Serve the Vegetarian Butter Chicken hot with steamed rice or naan bread.\\n\\nEnjoy your homemade Vegetarian Butter Chicken!\")"
+       "AIMessageChunk(content='AI: \\n    I know this:\\n    Capital: Seoul\\n    Language: Korean\\n    Food: Kimchi and Bibimbap\\n    Currency: South Korean won')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "veg_chef_prompt = ChatPromptTemplate.from_messages([\n",
-    "  (\"system\", \"You're a vegetarian chef specialized on making traditional recipies vegetarian. You find alternative ingrediants and explain their preparation. You don't radically modify recipies. If there's no alternative for a food, just say you don't know how to replace it.\"),\n",
-    "  (\"human\", \"{recipe}\")\n",
-    "])\n",
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.prompts.prompt import PromptTemplate\n",
+    "from langchain.prompts.few_shot import FewShotPromptTemplate\n",
+    "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
     "\n",
-    "veg_chain = veg_chef_prompt | chat\n",
+    "chat = ChatOpenAI(temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()])\n",
     "\n",
-    "final_chain = {\"recipe\": chef_chain} | veg_chain\n",
+    "examples = [\n",
+    "  {\n",
+    "    \"question\": \"What do you know about France?\",\n",
+    "    \"answer\": \"\"\"\n",
+    "    Here is what I know:\n",
+    "    Capital: Paris\n",
+    "    Language: French\n",
+    "    Food: Wine and Cheese\n",
+    "    Currency: Euro\n",
+    "    \"\"\",\n",
+    "  },\n",
+    "  {\n",
+    "    \"question\": \"What do you know about Italy?\",\n",
+    "    \"answer\": \"\"\"\n",
+    "    I know this:\n",
+    "    Capital: Rome\n",
+    "    Language: Italian\n",
+    "    Food: Pizza and Pasta\n",
+    "    Currency: Euro\n",
+    "    \"\"\",\n",
+    "  },\n",
+    "  {\n",
+    "    \"question\": \"What do you know about Greece?\",\n",
+    "    \"answer\": \"\"\"\n",
+    "    I know this:\n",
+    "    Capital: Athens\n",
+    "    Language: Greek\n",
+    "    Food: Souvlaki and Feta Cheese\n",
+    "    Currency: Euro\n",
+    "    \"\"\",\n",
+    "  },\n",
+    "]\n",
     "\n",
-    "final_chain.invoke({\n",
-    "  \"cuisine\": \"indian\"\n",
+    "example_prompt = PromptTemplate.from_template(\"Human: {question}\\nAI: {answer}\")\n",
+    "\n",
+    "prompt = FewShotPromptTemplate(\n",
+    "  example_prompt=example_prompt,\n",
+    "  examples=examples,\n",
+    "  suffix=\"Human: What do you know about {country}?\",\n",
+    "  input_variables=[\"country\"],\n",
+    ")\n",
+    "\n",
+    "chain = prompt | chat\n",
+    "chain.invoke({\n",
+    "  \"country\": \"Korea\"\n",
     "})"
    ]
   }
