--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,43 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AI: \n",
-      "    I know this:\n",
+      "I know this:\n",
       "    Capital: Seoul\n",
       "    Language: Korean\n",
       "    Food: Kimchi and Bibimbap\n",
-      "    Currency: South Korean won"
+      "    Currency: South Korean Won\n",
+      "    Korea is divided into two countries: South Korea and North Korea. South Korea is known for its technological advancements, K-pop music, and vibrant cities like Seoul. North Korea, on the other hand, is known for its closed-off nature and strict government control."
      ]
     },
     {
      "data": {
       "text/plain": [
-       "AIMessageChunk(content='AI: \\n    I know this:\\n    Capital: Seoul\\n    Language: Korean\\n    Food: Kimchi and Bibimbap\\n    Currency: South Korean won')"
+       "AIMessageChunk(content='I know this:\\n    Capital: Seoul\\n    Language: Korean\\n    Food: Kimchi and Bibimbap\\n    Currency: South Korean Won\\n    Korea is divided into two countries: South Korea and North Korea. South Korea is known for its technological advancements, K-pop music, and vibrant cities like Seoul. North Korea, on the other hand, is known for its closed-off nature and strict government control.')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts.prompt import PromptTemplate\n",
-    "from langchain.prompts.few_shot import FewShotPromptTemplate\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.prompts.few_shot import FewShotPromptTemplate, FewShotChatMessagePromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
     "\n",
     "chat = ChatOpenAI(temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()])\n",
     "\n",
     "examples = [\n",
     "  {\n",
-    "    \"question\": \"What do you know about France?\",\n",
+    "    \"country\": \"France\",\n",
     "    \"answer\": \"\"\"\n",
     "    Here is what I know:\n",
     "    Capital: Paris\n",
@@ -48,7 +48,7 @@
     "    \"\"\",\n",
     "  },\n",
     "  {\n",
-    "    \"question\": \"What do you know about Italy?\",\n",
+    "    \"country\": \"Italy\",\n",
     "    \"answer\": \"\"\"\n",
     "    I know this:\n",
     "    Capital: Rome\n",
@@ -58,7 +58,7 @@
     "    \"\"\",\n",
     "  },\n",
     "  {\n",
-    "    \"question\": \"What do you know about Greece?\",\n",
+    "    \"country\": \"Greece\",\n",
     "    \"answer\": \"\"\"\n",
     "    I know this:\n",
     "    Capital: Athens\n",
@@ -69,16 +69,23 @@
     "  },\n",
     "]\n",
     "\n",
-    "example_prompt = PromptTemplate.from_template(\"Human: {question}\\nAI: {answer}\")\n",
+    "example_prompt = ChatPromptTemplate.from_messages([\n",
+    "  (\"human\", \"What do you know about {country}?\"),\n",
+    "  (\"ai\", \"{answer}\")\n",
+    "])\n",
     "\n",
-    "prompt = FewShotPromptTemplate(\n",
+    "example_prompt = FewShotChatMessagePromptTemplate(\n",
     "  example_prompt=example_prompt,\n",
     "  examples=examples,\n",
-    "  suffix=\"Human: What do you know about {country}?\",\n",
-    "  input_variables=[\"country\"],\n",
     ")\n",
     "\n",
-    "chain = prompt | chat\n",
+    "final_prompt = ChatPromptTemplate.from_messages([\n",
+    "  (\"system\", \"You're geography expert.\"),\n",
+    "  example_prompt,\n",
+    "  (\"human\", \"What do you know about {country}?\")\n",
+    "])\n",
+    "\n",
+    "chain = final_prompt | chat\n",
     "chain.invoke({\n",
     "  \"country\": \"Korea\"\n",
     "})"
