--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,43 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I know this:\n",
-      "    Capital: Seoul\n",
-      "    Language: Korean\n",
-      "    Food: Kimchi and Bibimbap\n",
-      "    Currency: South Korean Won\n",
-      "    Korea is divided into two countries: South Korea and North Korea. South Korea is known for its technological advancements, K-pop music, and vibrant cities like Seoul. North Korea, on the other hand, is known for its closed-off nature and strict government control."
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "AIMessageChunk(content='I know this:\\n    Capital: Seoul\\n    Language: Korean\\n    Food: Kimchi and Bibimbap\\n    Currency: South Korean Won\\n    Korea is divided into two countries: South Korea and North Korea. South Korea is known for its technological advancements, K-pop music, and vibrant cities like Seoul. North Korea, on the other hand, is known for its closed-off nature and strict government control.')"
+       "'Human: What do you know about France?\\nAI: \\n    Here is what I know:\\n    Capital: Paris\\n    Language: French\\n    Food: Wine and Cheese\\n    Currency: Euro\\n    \\n\\nHuman: What do you know about Italy?\\nAI: \\n    I know this:\\n    Capital: Rome\\n    Language: Italian\\n    Food: Pizza and Pasta\\n    Currency: Euro\\n    \\n\\nHuman: What do you know about Brazil?'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts import ChatPromptTemplate\n",
-    "from langchain.prompts.few_shot import FewShotPromptTemplate, FewShotChatMessagePromptTemplate\n",
+    "from langchain.prompts.prompt import PromptTemplate\n",
+    "from langchain.prompts.few_shot import FewShotPromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
+    "from langchain.prompts.example_selector import LengthBasedExampleSelector\n",
+    "from langchain.prompts.example_selector.base import BaseExampleSelector\n",
     "\n",
     "chat = ChatOpenAI(temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()])\n",
     "\n",
     "examples = [\n",
     "  {\n",
-    "    \"country\": \"France\",\n",
+    "    \"question\": \"What do you know about France?\",\n",
     "    \"answer\": \"\"\"\n",
     "    Here is what I know:\n",
     "    Capital: Paris\n",
@@ -48,7 +38,7 @@
     "    \"\"\",\n",
     "  },\n",
     "  {\n",
-    "    \"country\": \"Italy\",\n",
+    "    \"question\": \"What do you know about Italy?\",\n",
     "    \"answer\": \"\"\"\n",
     "    I know this:\n",
     "    Capital: Rome\n",
@@ -58,7 +48,7 @@
     "    \"\"\",\n",
     "  },\n",
     "  {\n",
-    "    \"country\": \"Greece\",\n",
+    "    \"question\": \"What do you know about Greece?\",\n",
     "    \"answer\": \"\"\"\n",
     "    I know this:\n",
     "    Capital: Athens\n",
@@ -69,26 +59,113 @@
     "  },\n",
     "]\n",
     "\n",
-    "example_prompt = ChatPromptTemplate.from_messages([\n",
-    "  (\"human\", \"What do you know about {country}?\"),\n",
-    "  (\"ai\", \"{answer}\")\n",
-    "])\n",
+    "class RandomeExampleSelector(BaseExampleSelector):\n",
+    "  def select_examples(self, input_variables):\n",
+    "    from random import choice\n",
+    "    return choice(examples)\n",
     "\n",
-    "example_prompt = FewShotChatMessagePromptTemplate(\n",
+    "example_prompt = PromptTemplate.from_template(\"Human: {question}\\nAI: {answer}\")\n",
+    "\n",
+    "example_selector = LengthBasedExampleSelector(\n",
+    "  examples=examples,\n",
     "  example_prompt=example_prompt,\n",
+    "  max_length=100\n",
+    ")\n",
+    "\n",
+    "prompt = FewShotPromptTemplate(\n",
+    "  example_prompt=example_prompt,\n",
+    "  example_selector=example_selector,\n",
+    "  suffix=\"Human: What do you know about {country}?\",\n",
+    "  input_variables=[\"country\"],\n",
+    ")\n",
+    "\n",
+    "prompt.format(country=\"Brazil\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Human: What do you know about France?\\nAI: \\n    Here is what I know:\\n    Capital: Paris\\n    Language: French\\n    Food: Wine and Cheese\\n    Currency: Euro\\n    \\n\\nHuman: What do you know about Brazil?'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.prompts.prompt import PromptTemplate\n",
+    "from langchain.prompts.few_shot import FewShotPromptTemplate\n",
+    "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
+    "from langchain.prompts.example_selector import LengthBasedExampleSelector\n",
+    "from langchain.prompts.example_selector.base import BaseExampleSelector\n",
+    "\n",
+    "chat = ChatOpenAI(temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()])\n",
+    "\n",
+    "examples = [\n",
+    "  {\n",
+    "    \"question\": \"What do you know about France?\",\n",
+    "    \"answer\": \"\"\"\n",
+    "    Here is what I know:\n",
+    "    Capital: Paris\n",
+    "    Language: French\n",
+    "    Food: Wine and Cheese\n",
+    "    Currency: Euro\n",
+    "    \"\"\",\n",
+    "  },\n",
+    "  {\n",
+    "    \"question\": \"What do you know about Italy?\",\n",
+    "    \"answer\": \"\"\"\n",
+    "    I know this:\n",
+    "    Capital: Rome\n",
+    "    Language: Italian\n",
+    "    Food: Pizza and Pasta\n",
+    "    Currency: Euro\n",
+    "    \"\"\",\n",
+    "  },\n",
+    "  {\n",
+    "    \"question\": \"What do you know about Greece?\",\n",
+    "    \"answer\": \"\"\"\n",
+    "    I know this:\n",
+    "    Capital: Athens\n",
+    "    Language: Greek\n",
+    "    Food: Souvlaki and Feta Cheese\n",
+    "    Currency: Euro\n",
+    "    \"\"\",\n",
+    "  },\n",
+    "]\n",
+    "\n",
+    "class RandomeExampleSelector(BaseExampleSelector):\n",
+    "  def __init__(self, examples):\n",
+    "    self.examples = examples\n",
+    "\n",
+    "  def add_example(self, example):\n",
+    "    return self.examples.append(example)\n",
+    "\n",
+    "  def select_examples(self, input_variables):\n",
+    "    from random import choice\n",
+    "    return [choice(self.examples)]\n",
+    "\n",
+    "example_prompt = PromptTemplate.from_template(\"Human: {question}\\nAI: {answer}\")\n",
+    "\n",
+    "example_selector = RandomeExampleSelector(\n",
     "  examples=examples,\n",
     ")\n",
     "\n",
-    "final_prompt = ChatPromptTemplate.from_messages([\n",
-    "  (\"system\", \"You're geography expert.\"),\n",
-    "  example_prompt,\n",
-    "  (\"human\", \"What do you know about {country}?\")\n",
-    "])\n",
+    "prompt = FewShotPromptTemplate(\n",
+    "  example_prompt=example_prompt,\n",
+    "  example_selector=example_selector,\n",
+    "  suffix=\"Human: What do you know about {country}?\",\n",
+    "  input_variables=[\"country\"],\n",
+    ")\n",
     "\n",
-    "chain = final_prompt | chat\n",
-    "chain.invoke({\n",
-    "  \"country\": \"Korea\"\n",
-    "})"
+    "prompt.format(country=\"Brazil\")"
    ]
   }
  ],
