--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,170 +2,165 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Human: What do you know about France?\\nAI: \\n    Here is what I know:\\n    Capital: Paris\\n    Language: French\\n    Food: Wine and Cheese\\n    Currency: Euro\\n    \\n\\nHuman: What do you know about Italy?\\nAI: \\n    I know this:\\n    Capital: Rome\\n    Language: Italian\\n    Food: Pizza and Pasta\\n    Currency: Euro\\n    \\n\\nHuman: What do you know about Brazil?'"
+       "'What is the capital of Germany?'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts.prompt import PromptTemplate\n",
-    "from langchain.prompts.few_shot import FewShotPromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
-    "from langchain.prompts.example_selector import LengthBasedExampleSelector\n",
-    "from langchain.prompts.example_selector.base import BaseExampleSelector\n",
+    "from langchain.prompts import load_prompt\n",
+    "\n",
+    "prompt = load_prompt(\"./prompt.json\")\n",
     "\n",
     "chat = ChatOpenAI(temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()])\n",
     "\n",
-    "examples = [\n",
-    "  {\n",
-    "    \"question\": \"What do you know about France?\",\n",
-    "    \"answer\": \"\"\"\n",
-    "    Here is what I know:\n",
-    "    Capital: Paris\n",
-    "    Language: French\n",
-    "    Food: Wine and Cheese\n",
-    "    Currency: Euro\n",
-    "    \"\"\",\n",
-    "  },\n",
-    "  {\n",
-    "    \"question\": \"What do you know about Italy?\",\n",
-    "    \"answer\": \"\"\"\n",
-    "    I know this:\n",
-    "    Capital: Rome\n",
-    "    Language: Italian\n",
-    "    Food: Pizza and Pasta\n",
-    "    Currency: Euro\n",
-    "    \"\"\",\n",
-    "  },\n",
-    "  {\n",
-    "    \"question\": \"What do you know about Greece?\",\n",
-    "    \"answer\": \"\"\"\n",
-    "    I know this:\n",
-    "    Capital: Athens\n",
-    "    Language: Greek\n",
-    "    Food: Souvlaki and Feta Cheese\n",
-    "    Currency: Euro\n",
-    "    \"\"\",\n",
-    "  },\n",
-    "]\n",
-    "\n",
-    "class RandomeExampleSelector(BaseExampleSelector):\n",
-    "  def select_examples(self, input_variables):\n",
-    "    from random import choice\n",
-    "    return choice(examples)\n",
-    "\n",
-    "example_prompt = PromptTemplate.from_template(\"Human: {question}\\nAI: {answer}\")\n",
-    "\n",
-    "example_selector = LengthBasedExampleSelector(\n",
-    "  examples=examples,\n",
-    "  example_prompt=example_prompt,\n",
-    "  max_length=100\n",
-    ")\n",
-    "\n",
-    "prompt = FewShotPromptTemplate(\n",
-    "  example_prompt=example_prompt,\n",
-    "  example_selector=example_selector,\n",
-    "  suffix=\"Human: What do you know about {country}?\",\n",
-    "  input_variables=[\"country\"],\n",
-    ")\n",
-    "\n",
-    "prompt.format(country=\"Brazil\")"
+    "prompt.format(country=\"Germany\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Human: What do you know about France?\\nAI: \\n    Here is what I know:\\n    Capital: Paris\\n    Language: French\\n    Food: Wine and Cheese\\n    Currency: Euro\\n    \\n\\nHuman: What do you know about Brazil?'"
+       "'What is the capital of Korea?'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt = load_prompt(\"./prompt.yaml\")\n",
+    "\n",
+    "chat = ChatOpenAI(temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()])\n",
+    "\n",
+    "prompt.format(country=\"Korea\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n  \\n  You are a role playing assistant.\\n  And you are impersonating a Pirate\\n\\n                                    \\n  \\n  This is an example of how you talk:\\n\\n  Human: What is your location?\\n  You: Arrrg, that is a secret. Arg arg!!\\n\\n                            \\n  \\n  Start now!\\n\\n  Human: What is your favorate food?\\n  You:\\n\\n'"
+      ]
+     },
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts.prompt import PromptTemplate\n",
-    "from langchain.prompts.few_shot import FewShotPromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
-    "from langchain.prompts.example_selector import LengthBasedExampleSelector\n",
-    "from langchain.prompts.example_selector.base import BaseExampleSelector\n",
+    "from langchain.prompts.pipeline import PipelinePromptTemplate\n",
     "\n",
     "chat = ChatOpenAI(temperature=0.1, streaming=True, callbacks=[StreamingStdOutCallbackHandler()])\n",
     "\n",
-    "examples = [\n",
-    "  {\n",
-    "    \"question\": \"What do you know about France?\",\n",
-    "    \"answer\": \"\"\"\n",
-    "    Here is what I know:\n",
-    "    Capital: Paris\n",
-    "    Language: French\n",
-    "    Food: Wine and Cheese\n",
-    "    Currency: Euro\n",
-    "    \"\"\",\n",
-    "  },\n",
-    "  {\n",
-    "    \"question\": \"What do you know about Italy?\",\n",
-    "    \"answer\": \"\"\"\n",
-    "    I know this:\n",
-    "    Capital: Rome\n",
-    "    Language: Italian\n",
-    "    Food: Pizza and Pasta\n",
-    "    Currency: Euro\n",
-    "    \"\"\",\n",
-    "  },\n",
-    "  {\n",
-    "    \"question\": \"What do you know about Greece?\",\n",
-    "    \"answer\": \"\"\"\n",
-    "    I know this:\n",
-    "    Capital: Athens\n",
-    "    Language: Greek\n",
-    "    Food: Souvlaki and Feta Cheese\n",
-    "    Currency: Euro\n",
-    "    \"\"\",\n",
-    "  },\n",
+    "intro = PromptTemplate.from_template(\n",
+    "  \"\"\"\n",
+    "  You are a role playing assistant.\n",
+    "  And you are impersonating a {character}\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "example = PromptTemplate.from_template(\n",
+    "  \"\"\"\n",
+    "  This is an example of how you talk:\n",
+    "\n",
+    "  Human: {example_question}\n",
+    "  You: {example_answer}\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "start = PromptTemplate.from_template(\n",
+    "  \"\"\"\n",
+    "  Start now!\n",
+    "\n",
+    "  Human: {question}\n",
+    "  You:\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "final = PromptTemplate.from_template(\n",
+    "  \"\"\"\n",
+    "  {intro}\n",
+    "                                    \n",
+    "  {example}\n",
+    "                            \n",
+    "  {start}\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "prompts = [\n",
+    "  (\"intro\", intro),\n",
+    "  (\"example\", example),\n",
+    "  (\"start\", start),\n",
     "]\n",
     "\n",
-    "class RandomeExampleSelector(BaseExampleSelector):\n",
-    "  def __init__(self, examples):\n",
-    "    self.examples = examples\n",
-    "\n",
-    "  def add_example(self, example):\n",
-    "    return self.examples.append(example)\n",
-    "\n",
-    "  def select_examples(self, input_variables):\n",
-    "    from random import choice\n",
-    "    return [choice(self.examples)]\n",
-    "\n",
-    "example_prompt = PromptTemplate.from_template(\"Human: {question}\\nAI: {answer}\")\n",
-    "\n",
-    "example_selector = RandomeExampleSelector(\n",
-    "  examples=examples,\n",
+    "full_prompt = PipelinePromptTemplate(\n",
+    "  final_prompt=final,\n",
+    "  pipeline_prompts=prompts,\n",
     ")\n",
     "\n",
-    "prompt = FewShotPromptTemplate(\n",
-    "  example_prompt=example_prompt,\n",
-    "  example_selector=example_selector,\n",
-    "  suffix=\"Human: What do you know about {country}?\",\n",
-    "  input_variables=[\"country\"],\n",
-    ")\n",
+    "full_prompt.format(\n",
+    "  character=\"Pirate\",\n",
+    "  example_question=\"What is your location?\",\n",
+    "  example_answer=\"Arrrg, that is a secret. Arg arg!!\",\n",
+    "  question=\"What is your favorate food?\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arrr, me favorite food be a good ol' plate o' fish 'n' chips! The taste o' crispy battered fish and salty chips be enough to make me heart sing like a sea shanty! Arg arg!"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "AIMessageChunk(content=\"Arrr, me favorite food be a good ol' plate o' fish 'n' chips! The taste o' crispy battered fish and salty chips be enough to make me heart sing like a sea shanty! Arg arg!\")"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain = full_prompt | chat\n",
     "\n",
-    "prompt.format(country=\"Brazil\")"
+    "chain.invoke({\n",
+    "  \"character\": \"Pirate\",\n",
+    "  \"example_question\": \"What is your location?\",\n",
+    "  \"example_answer\": \"Arrrg, that is a secret. Arg arg!!\",\n",
+    "  \"question\": \"What is your favorate food?\"\n",
+    "})"
    ]
   }
  ],
