--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,86 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tokens Used: 388\n",
-      "\tPrompt Tokens: 15\n",
-      "\tCompletion Tokens: 373\n",
-      "Successful Requests: 1\n",
-      "Total Cost (USD): $0.0007685\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.callbacks import get_openai_callback\n",
-    "\n",
-    "chat = ChatOpenAI(\n",
-    "  temperature=0.1, \n",
-    "  # streaming=True, \n",
-    "  # callbacks=[StreamingStdOutCallbackHandler()]\n",
-    ")\n",
-    "\n",
-    "with get_openai_callback() as usage:\n",
-    "  chat.predict(\"What is the recipe of soju?\")\n",
-    "  print(usage)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.llms.openai import OpenAI\n",
-    "\n",
-    "chat = OpenAI(\n",
-    "  temperature=0.1,\n",
-    "  max_tokens=450,\n",
-    "  model=\"gpt-3.5-turbo-16k\"\n",
-    ")\n",
-    "\n",
-    "chat.save(\"model.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/yuls/workspace/fullstack-gpt/.venv/lib/python3.11/site-packages/langchain/llms/openai.py:216: UserWarning: You are trying to use a chat model. This way of initializing it is no longer supported. Instead, please use: `from langchain.chat_models import ChatOpenAI`\n",
-      "  warnings.warn(\n",
-      "/Users/yuls/workspace/fullstack-gpt/.venv/lib/python3.11/site-packages/langchain/llms/openai.py:811: UserWarning: You are trying to use a chat model. This way of initializing it is no longer supported. Instead, please use: `from langchain.chat_models import ChatOpenAI`\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "OpenAIChat(client=<class 'openai.api_resources.chat_completion.ChatCompletion'>, model_name='gpt-3.5-turbo-16k', model_kwargs={'temperature': 0.1, 'max_tokens': 450, 'top_p': 1, 'frequency_penalty': 0, 'presence_penalty': 0, 'n': 1, 'request_timeout': None, 'logit_bias': {}})"
+       "{'history': [HumanMessage(content='Hi'), AIMessage(content='How are you?')]}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain.llms.loading import load_llm\n",
+    "from langchain.memory import ConversationBufferMemory\n",
     "\n",
-    "chat_load = load_llm(\"./model.json\")\n",
+    "memory = ConversationBufferMemory(return_messages=True)\n",
     "\n",
-    "chat_load"
+    "memory.save_context({\"input\":\"Hi\"}, {\"output\":\"How are you?\"})\n",
+    "\n",
+    "memory.load_memory_variables({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': [HumanMessage(content='Hi'),\n",
+       "  AIMessage(content='How are you?'),\n",
+       "  HumanMessage(content='Hi'),\n",
+       "  AIMessage(content='How are you?')]}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "memory.save_context({\"input\":\"Hi\"}, {\"output\":\"How are you?\"})\n",
+    "\n",
+    "memory.load_memory_variables({})"
    ]
   }
  ],
